--- a/strategie/Makefile
+++ b/strategie/Makefile
@@ -1,19 +1,7 @@
-CC=gcc
-CFLAGS=-Wall
-LDFLAGS=
-SOURCES=farmari.c  lupici.c  utocnici.c 
-EXECUTABLE=farmari lupici utocnici
+all: strilej
 
-all: $(EXECUTABLE)
-
-lupici: lupici.c
-	$(CC) $(CFLAGS) lupici.c -o $@
-
-farmari: farmari.c
-	$(CC) $(CFLAGS) farmari.c -o $@
-
-utocnici: utocnici.c
-	$(CC) $(CFLAGS) utocnici.c -o $@
+strilej: strilej.c
+	gcc -o $@ strilej.c
 
 clean:
-	rm -rf  $(EXECUTABLE)
+	rm -rf strilej
